Bug 45190 - FILEOPEN Shifted and invisible content in table in rtf document
Summary: FILEOPEN Shifted and invisible content in table in rtf document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta3
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.6.0 target:3.5.5
Keywords: filter:rtf, regression
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-01-24 10:13 UTC by Pavel Kysilka
Modified: 2015-12-17 11:53 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (291.53 KB, application/rtf)
2012-01-24 10:13 UTC, Pavel Kysilka
Details
the same document, saved as pdf in msWord 2007 (142.58 KB, application/pdf)
2012-05-11 01:04 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Kysilka 2012-01-24 10:13:06 UTC

    
Comment 1 Pavel Kysilka 2012-01-24 10:13:37 UTC
Created attachment 56099 [details]
Sample document
Comment 2 sasha.libreoffice 2012-05-11 01:04:10 UTC
Created attachment 61426 [details]
the same document, saved as pdf in msWord 2007
Comment 3 sasha.libreoffice 2012-05-11 01:06:04 UTC
reproduced in 3.5.3 on Fedora 64 bit

in 3.3.4 not reproducible, therefore regression
Comment 4 Michael Meeks 2012-05-11 01:25:09 UTC
Miklos - looks like one for you :-) Rather a serious table mangling, and a MAB too ...
Comment 5 Not Assigned 2012-05-11 06:12:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf123eeffc05907dfcb0d355ab17359353b0ede5

fdo#45190 import of RTF_LI should reset inherited RTF_FI
Comment 6 Miklos Vajna 2012-05-11 06:13:38 UTC
Hi Pavel,

Resolved in master, marking as such.

Thanks for the report,

Miklos
Comment 7 sasha.libreoffice 2012-05-11 22:56:43 UTC
Thanks for fixing this bug
Comment 8 s-joyemusequna 2012-05-19 02:38:00 UTC
Verified with LOdev 3.6 (master - 18-May-2012 02h44 x86@6-fast; Build ID: 8b1d29b) under Windows Vista 64. Content is visible and not shifted.

But: table formatting
Comment 9 Cor Nouws 2012-05-24 06:36:14 UTC
(In reply to comment #8)

> But: table formatting

Hi, what do you mean?
Not looking for details, too me it looks fine. Do I oversee something?
Comment 10 Cor Nouws 2012-05-24 06:37:34 UTC
@ miklos:

(In reply to comment #5)
> Miklos Vajna committed a patch related to this issue.
> It has been pushed to "master":

could this also be a path for the 3.5 branch ?
Comment 11 Not Assigned 2012-05-30 08:10:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e7657eb87cf97df3aa40cb662963d6d85816ad5&g=libreoffice-3-5

fdo#45190 import of RTF_LI should reset inherited RTF_FI


It will be available in LibreOffice 3.5.5.
Comment 12 Robinson Tryon (qubit) 2015-12-17 11:53:48 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]