fdo#45190 import of RTF_LI should reset inherited RTF_FI

Change-Id: I17c287fa4daa399876b34182c02d9cf928fe1b6f